--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "nodb",
   "version": "0.1.0",
   "private": true,
+  "main": "server/server.js",
+  "proxy": "http://localhost:3050",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.0.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
